--- a/fly.toml
+++ b/fly.toml
@@ -1,19 +1,7 @@
-app = "toiletbot"   # must match your app name on Fly.io
+app = "toiletbot"
 
 [build]
-  # Use Python 3.10 image
-  image = "python:3.10"
+  dockerfile = "Dockerfile"
 
 [env]
-  PYTHONUNBUFFERED = "1"
-
-[[services]]
-  internal_port = 8080
-  protocol = "tcp"
-
-  [[services.ports]]
-    port = 80
-    handlers = ["http"]
-
-[experimental]
-  cmd = ["python", "toilet_bot.py"]
+  PYTHONUNBUFFERED = "true"
